new elective admission marker + sepsis diagnosis as feature

--- a/preprocessing/DataPreprocessing_Aggregated.ipynb
+++ b/preprocessing/DataPreprocessing_Aggregated.ipynb
@@ -2051,6 +2051,107 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6636ef46-219b-42c7-8db1-a5c351072f10",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Mechanical Ventilation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42634ac8-be66-4c2b-b33d-48f5799fef2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vent_df = read_csv(DATA_DIR + 'ventilation_cohort.csv')\n",
+    "\n",
+    "for icustay_id, settings in tqdm(vent_df.groupby('icustay_id')):\n",
+    "    \n",
+    "    # Is icustay part of cohort?\n",
+    "    if icustay_id not in data_all:\n",
+    "        continue\n",
+    "        \n",
+    "    # Add urine output to `data_all` to store aggregated urine measurements\n",
+    "    timesteps = icustay_timesteps[icustay_id]\n",
+    "    data_all[icustay_id]['mech_vent'] = np.full(len(timesteps) - 1, np.nan)\n",
+    "            \n",
+    "    for i, interval_start in enumerate(timesteps[:-1]):\n",
+    "        interval_end = timesteps[i + 1]\n",
+    "        \n",
+    "        # Inclusion test: charttime in (interval_start, interval_end)\n",
+    "        condition = (settings['charttime'] > interval_start) & (settings['charttime'] <= interval_end)    \n",
+    "        \n",
+    "        # Were there any settings indicating ventilation?\n",
+    "        data_all[icustay_id]['mech_vent'][i] = condition.any()\n",
+    "        \n",
+    "del vent_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0df32463-51d9-4b4b-8bce-b66c7c3073de",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Antibiotics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a31ad83-3015-40af-b817-3de8b3e0330d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "antibiotics_df = read_csv(DATA_DIR + 'antibiotics_cohort.csv')\n",
+    "antibiotics_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2347bab-041a-484e-8fff-d1e70580bcc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Consider ICU stays one-by-one\n",
+    "for icustay_id, treatments in tqdm(vaso_mv_df.groupby('icustay_id')):\n",
+    "    \n",
+    "    # Is icustay part of cohort?\n",
+    "    if icustay_id not in data_all:\n",
+    "        continue\n",
+    "        \n",
+    "    # To store antibiotics markers into\n",
+    "    timesteps = icustay_timesteps[icustay_id]\n",
+    "    sepsis_antibiotics = np.zeros(len(timesteps) - 1, dtype=np.float32)\n",
+    "    profyl_antibiotics = np.zeros(len(timesteps) - 1, dtype=np.float32)\n",
+    "    other_antibiotics = np.zeros(len(timesteps) - 1, dtype=np.float32)\n",
+    "    \n",
+    "    for i, interval_start in enumerate(timesteps[:-1]):\n",
+    "        interval_end = timesteps[i + 1]\n",
+    "        \n",
+    "        # Inclusion test: treatment time overlaps with current interval.\n",
+    "        # Remark: original R-code erroneously used 'treatment[endtime] <= interval_end' as first term\n",
+    "        condition = (treatments['starttime'] <= interval_end) & (treatments['endtime'] > interval_start)\n",
+    "        \n",
+    "        # Compute whether any form of sepsis-rlated/profylactic anitbiotics was administered\n",
+    "        sepsis_antibiotics[i] = np.nan_to_num(treatments[condition]['sepsis_antibiotics'].max(), nan=0.0)\n",
+    "        profyl_antibiotics[i] = np.nan_to_num(treatments[condition]['profyl_antibiotics'].max(), nan=0.0)\n",
+    "        other_antibiotics[i] = np.nan_to_num(treatments[condition]['profyl_other'].max(), nan=0.0)\n",
+    "        \n",
+    "    data_all[icustay_id]['sepsis_antibiotics'] = sepsis_antibiotics\n",
+    "    data_all[icustay_id]['profyl_antibiotics'] = profyl_antibiotics\n",
+    "    data_all[icustay_id]['other_antibiotics'] = other_antibiotics\n",
+    "    \n",
+    "del antibiotics_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0a0d4be4",
    "metadata": {},
    "source": [
@@ -2697,7 +2798,7 @@
    "outputs": [],
    "source": [
     "# Define demographics and disease severity scores of interest (on admission)\n",
-    "DEMOGRAPHICS_COLS = ['age', 'height', 'is_male', 'weight', 'vent', 'sofa', 'sirs']"
+    "DEMOGRAPHICS_COLS = ['age', 'height', 'is_male', 'weight', 'vent', 'sofa', 'sirs', 'elective', 'is_sepsis']"
    ]
   },
   {
@@ -3156,7 +3257,7 @@
     "                              'sirs_score': data_all_df['sirs'],\n",
     "                              'sofa_score': data_all_df['sofa'],\n",
     "                              'weight': data_all_df['weight'],\n",
-    "                              'ventilator': data_all_df['vent'],\n",
+    "                              'ventilator': data_all_df['mech_vent'], # ventilation over time - not static!\n",
     "                              'height': data_all_df['height'],\n",
     "                              'age': data_all_df['age'],\n",
     "                              'gender': data_all_df['is_male'],\n",
