added hematocrit, svo2, cvo2, d-dimer support

--- a/preprocessing/DataPreprocessing_Aggregated.ipynb
+++ b/preprocessing/DataPreprocessing_Aggregated.ipynb
@@ -1946,7 +1946,13 @@
     }
    ],
    "source": [
-    "lab_df = read_csv(DATA_DIR + 'labs_cohort.csv')\n",
+    "# load lab results (only necessary columns)\n",
+    "lab_df = read_csv(DATA_DIR + 'labs_cohort.csv', usecols=['icustay_id', 'charttime', 'lab_id', 'valuenum'])\n",
+    "\n",
+    "# if exists, add additional file with hemotocrite, D-Dimer.etc.\n",
+    "if os.path.exists(DATA_DIR + 'hematocrit_d-dimer_cvo2.csv'):\n",
+    "    hema_df = read_csv(DATA_DIR + 'hematocrit_d-dimer_cvo2.csv')\n",
+    "    lab_df = pd.concat([lab_df, hema_df], axis=0)\n",
     "\n",
     "# Drop rows with NaNs\n",
     "lab_df = lab_df.dropna(axis=0)\n",
@@ -2062,12 +2068,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42634ac8-be66-4c2b-b33d-48f5799fef2a",
+   "id": "16701f97-6820-4afa-8400-7d2d9f2c6554",
    "metadata": {},
    "outputs": [],
    "source": [
     "vent_df = read_csv(DATA_DIR + 'ventilation_cohort.csv')\n",
-    "\n",
+    "vent_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42634ac8-be66-4c2b-b33d-48f5799fef2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for icustay_id, settings in tqdm(vent_df.groupby('icustay_id')):\n",
     "    \n",
     "    # Is icustay part of cohort?\n",
