--- a/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
+++ b/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "id": "8336f184-b62e-4fc9-85d9-a37504a88ea9",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "21595f08-f8a0-4d0c-b364-3951ae1951cc",
    "metadata": {},
    "outputs": [],
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "id": "0fac24b1-9503-4cc2-8ddf-0b704bb35bd8",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "id": "2093ea59-a8b7-4bb2-a2d7-85b08c6aecd6",
    "metadata": {},
    "outputs": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "id": "e9350c9f-239d-4895-9161-015faeb9909d",
    "metadata": {},
    "outputs": [],
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "id": "3e8d9ea8-eb13-4f02-9055-2dcc7e64f622",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "aa1adfec-5ab4-4160-bbc3-0423528cc7c0",
    "metadata": {},
    "outputs": [
@@ -182,8 +182,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Admission start:   2022-11-21 11:14:49.572532\n",
-      "Two hours in:      2022-11-21 13:14:49.572532\n"
+      "Admission start:   2022-11-21 13:00:06.614176\n",
+      "Two hours in:      2022-11-21 15:00:06.614176\n"
      ]
     }
    ],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 36,
    "id": "597151bd-bdd3-4b7f-8e9d-ed85b9e0a56d",
    "metadata": {},
    "outputs": [
@@ -244,36 +244,36 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-18 18:01:52.896987</td>\n",
-       "      <td>2022-11-21 18:01:52.896987</td>\n",
+       "      <td>2022-11-21 13:00:06.614176</td>\n",
+       "      <td>2022-11-24 13:00:06.614176</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>2022-11-18 18:01:52.896987</td>\n",
-       "      <td>2022-11-21 18:01:52.896987</td>\n",
+       "      <td>2022-11-21 13:00:06.614176</td>\n",
+       "      <td>2022-11-24 13:00:06.614176</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2022-11-18 18:01:52.896987</td>\n",
-       "      <td>2022-11-21 18:01:52.896987</td>\n",
+       "      <td>2022-11-21 13:00:06.614176</td>\n",
+       "      <td>2022-11-24 13:00:06.614176</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>2022-11-18 18:01:52.896987</td>\n",
-       "      <td>2022-11-21 18:01:52.896987</td>\n",
+       "      <td>2022-11-21 13:00:06.614176</td>\n",
+       "      <td>2022-11-24 13:00:06.614176</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>2022-11-18 18:01:52.896987</td>\n",
-       "      <td>2022-11-21 18:01:52.896987</td>\n",
+       "      <td>2022-11-21 13:00:06.614176</td>\n",
+       "      <td>2022-11-24 13:00:06.614176</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -282,11 +282,11 @@
       ],
       "text/plain": [
        "   icustay_id               window_start                 window_end  \\\n",
-       "0           0 2022-11-18 18:01:52.896987 2022-11-21 18:01:52.896987   \n",
-       "1           1 2022-11-18 18:01:52.896987 2022-11-21 18:01:52.896987   \n",
-       "2           2 2022-11-18 18:01:52.896987 2022-11-21 18:01:52.896987   \n",
-       "3           3 2022-11-18 18:01:52.896987 2022-11-21 18:01:52.896987   \n",
-       "4           4 2022-11-18 18:01:52.896987 2022-11-21 18:01:52.896987   \n",
+       "0           0 2022-11-21 13:00:06.614176 2022-11-24 13:00:06.614176   \n",
+       "1           1 2022-11-21 13:00:06.614176 2022-11-24 13:00:06.614176   \n",
+       "2           2 2022-11-21 13:00:06.614176 2022-11-24 13:00:06.614176   \n",
+       "3           3 2022-11-21 13:00:06.614176 2022-11-24 13:00:06.614176   \n",
+       "4           4 2022-11-21 13:00:06.614176 2022-11-24 13:00:06.614176   \n",
        "\n",
        "   hospital_expire_flag  \n",
        "0                     0  \n",
@@ -296,7 +296,7 @@
        "4                     0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "id": "19da3fce-941f-4c70-a4c2-cf7dd8c4bed9",
    "metadata": {},
    "outputs": [],
@@ -1782,7 +1782,7 @@
     }
    ],
    "source": [
-    "is_elective = set()\n",
+    "is_elective = set() # equiv. to surgical\n",
     "is_sepsis = set()\n",
     "\n",
     "for _, chunk in pbar(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/listitems.csv\", usecols=['admissionid', 'itemid', 'valueid', 'measuredat'])):\n",
@@ -1805,7 +1805,7 @@
    "id": "ec4b211c-7899-449d-a801-a6bd066bae91",
    "metadata": {},
    "source": [
-    "### Putting it all together"
+    "### Merge as DataFrame"
    ]
   },
   {
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 50,
    "id": "0d17548d-83c2-4afe-b96c-024f4acb9b6e",
    "metadata": {},
    "outputs": [
@@ -1893,7 +1893,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████████████████████████████████████| 23106/23106 [01:30<00:00, 255.96it/s]\n"
+      "100%|███████████████████████████████████████████████████████████████████████████| 23106/23106 [01:27<00:00, 264.32it/s]\n"
      ]
     },
     {
@@ -1925,27 +1925,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-21 16:56:49.572532</td>\n",
+       "      <td>2022-11-21 18:42:06.614176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-21 17:26:49.572532</td>\n",
+       "      <td>2022-11-21 19:12:06.614176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-21 18:26:49.572532</td>\n",
+       "      <td>2022-11-21 20:12:06.614176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-21 19:26:49.572532</td>\n",
+       "      <td>2022-11-21 21:12:06.614176</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
-       "      <td>2022-11-21 20:26:49.572532</td>\n",
+       "      <td>2022-11-21 22:12:06.614176</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1953,20 +1953,20 @@
       ],
       "text/plain": [
        "   icustay_id                  charttime\n",
-       "0           0 2022-11-21 16:56:49.572532\n",
-       "1           0 2022-11-21 17:26:49.572532\n",
-       "2           0 2022-11-21 18:26:49.572532\n",
-       "3           0 2022-11-21 19:26:49.572532\n",
-       "4           0 2022-11-21 20:26:49.572532"
+       "0           0 2022-11-21 18:42:06.614176\n",
+       "1           0 2022-11-21 19:12:06.614176\n",
+       "2           0 2022-11-21 20:12:06.614176\n",
+       "3           0 2022-11-21 21:12:06.614176\n",
+       "4           0 2022-11-21 22:12:06.614176"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vent_dfs = []\n",
+    "vents_df = []\n",
     "\n",
     "for _, chunk in pbar(read_csv(r\"D:/AmsterdamUMCdb-v1.0.2/listitems.csv\", usecols=['admissionid', 'itemid', 'valueid', 'measuredat'])):\n",
     "    # which observations are within 72h of start admission?\n",
@@ -1974,7 +1974,7 @@
     "    chunk = chunk[(times > 0) & (times < 72)]\n",
     "    if not len(chunk):\n",
     "        continue\n",
-    "    \n",
+    "            \n",
     "    # which of those admissions indicate the use of ventilatory support?\n",
     "    chunk = chunk[is_mech_vent(chunk.itemid, chunk.valueid)]\n",
     "        \n",
@@ -1983,23 +1983,36 @@
     "        'icustay_id': chunk.admissionid,\n",
     "        'charttime': to_timestamp(first_admission_start, ms=chunk.measuredat),\n",
     "    })\n",
-    "    vent_dfs.append(vent_df)\n",
+    "    vents_df.append(vent_df)\n",
     "        \n",
     "# Merge ventilator DataFrames\n",
-    "vent_dfs = pd.concat(vent_dfs, axis=0).reset_index(drop=True)\n",
-    "vent_dfs.head()"
+    "vents_df = pd.concat(vents_df, axis=0).reset_index(drop=True)\n",
+    "vents_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "id": "8f4050fd-25ca-4bf2-8f71-a7991239f2ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# how many patients receive respiratory support in first 72 hours?\n",
+    "total_admissions = len(cohort_df.icustay_id.unique())\n",
+    "vent_admissions = len(vents_df.icustay_id.unique())\n",
+    "print('% on respiratory support within 72h: %.2f' % (100 * vent_admissions / total_admissions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "id": "3619bb78-ca9f-45e3-82d6-6e0e7383e14b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# save!\n",
-    "vent_dfs.to_csv(OUT_DIR + 'ventilation_cohort.csv', index=False)\n",
-    "del vent_dfs"
+    "vents_df.to_csv(OUT_DIR + 'ventilation_cohort.csv', index=False)\n",
+    "del vents_df"
    ]
   },
   {
