ventilation_cohort to vent_cohort

--- a/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
+++ b/data/amsterdam-umc-db/DataExtraction_AmsterdamUMCdb_AllAdmissions.ipynb
@@ -2011,7 +2011,7 @@
    "outputs": [],
    "source": [
     "# save!\n",
-    "vents_df.to_csv(OUT_DIR + 'ventilation_cohort.csv', index=False)\n",
+    "vents_df.to_csv(OUT_DIR + 'vent_cohort.csv', index=False)\n",
     "del vents_df"
    ]
   },
@@ -2024,7 +2024,7 @@
     "\n",
     "## Antibiotics\n",
     "\n",
-    "Did the patient receive prophylactic antibiotics treatments? Other antibiotics?, e.g. those administered in case of sepsis?\n",
+    "Did the patient receive prophylactic antibiotic treatments? Or other antibiotics, e.g. those delivered in case of sepsis?\n",
     "\n",
     "Source: [reason_for_admission.sql](https://github.com/AmsterdamUMC/AmsterdamUMCdb/blob/master/amsterdamumcdb/sql/diagnosis/reason_for_admission.sql)"
    ]
