added ventilatory support for MIMIC/AmsterdamUMCdb

--- a/preprocessing/DataPreprocessing_Aggregated.ipynb
+++ b/preprocessing/DataPreprocessing_Aggregated.ipynb
@@ -2062,7 +2062,9 @@
    "source": [
     "---\n",
     "\n",
-    "## Mechanical Ventilation"
+    "## Mechanical Ventilation\n",
+    "\n",
+    "The way mechanical ventilation is extracted using MIMIC-Code is slightly different from the AmsterdamUMCdb; from AmsterdamUMCdb we determine use of mechanical ventilation through changes in the settings (which are recorded at specific times and thus have a `charttime`). With MIMIC-Code these settings are already aggregated into intervals of consecutive setting changes with a `starttime` and an `endtime`. In the code below we thus check for the format used and process them appropriately."
    ]
   },
   {
@@ -2073,7 +2075,10 @@
    "outputs": [],
    "source": [
     "vent_df = read_csv(DATA_DIR + 'ventilation_cohort.csv')\n",
-    "vent_df.head()"
+    "vent_df.head()\n",
+    "\n",
+    "# Uses charttime as in AmsterdamUMCdb or intervals as in MIMIC\n",
+    "is_umcdb = 'charttime' in vent_df.columns"
    ]
   },
   {
@@ -2096,8 +2101,12 @@
     "    for i, interval_start in enumerate(timesteps[:-1]):\n",
     "        interval_end = timesteps[i + 1]\n",
     "        \n",
-    "        # Inclusion test: charttime in (interval_start, interval_end)\n",
-    "        condition = (settings['charttime'] > interval_start) & (settings['charttime'] <= interval_end)    \n",
+    "        # Inclusion test for AmsterdamUMCdb: charttime in current interval?\n",
+    "        if is_umcdb:\n",
+    "            condition = (settings['charttime'] > interval_start) & (settings['charttime'] <= interval_end)    \n",
+    "        else: \n",
+    "            # MIMIC-III: does ventilation time overlap with current interval?\n",
+    "            condition = (treatments['starttime'] <= interval_end) & (treatments['endtime'] > interval_start)\n",
     "        \n",
     "        # Were there any settings indicating ventilation?\n",
     "        data_all[icustay_id]['mech_vent'][i] = condition.any()\n",
