--- a/preprocessing/DataPreprocessing_Aggregated.ipynb
+++ b/preprocessing/DataPreprocessing_Aggregated.ipynb
@@ -5,13 +5,11 @@
    "id": "126b6815",
    "metadata": {},
    "source": [
-    "# Notebook to Preprocess MIMIC-III v1.4 Data Files\n",
+    "# Preprocessing AmsterdamUMCdb and MIMIC-III v1.4 Data Files\n",
     "\n",
-    "In this notebook we will preprocess the [MIMIC-III](https://physionet.org/content/mimiciii/1.4/) v1.4 data files as extracted by [MIMIC-Code](https://github.com/MIT-LCP/mimic-code). Here, we implement the preprocessing for the *handcrafted state-space approach* as used by [Roggeveen et al.](https://www.sciencedirect.com/science/article/pii/S0933365720312689), by aggregating measurements into bins of 4-hours starting from the 24 hour prior to sepsis onset to 48 hours after (72 hours in total).\n",
+    "In this notebook we will preprocess the [AmsterdamUMCdb](https://github.com/AmsterdamUMC) and [MIMIC-III](https://physionet.org/content/mimiciii/1.4/) v1.4 data files as extracted by [MIMIC-Code](https://github.com/MIT-LCP/mimic-code). Here, we implement a preprocessing pipeline similar to [Roggeveen et al.](https://www.sciencedirect.com/science/article/pii/S0933365720312689), by aggregating measurements into bins of 1-hour (different from the 4 hours used by Roggeveen et al.) starting from admission up to 72 hours in.\n",
     "\n",
-    "The [original notebook](https://github.com/LucaMD/SRL/blob/master/SEPSIS/MIMIC_src/MIMIC_R_DataPreprocessing.ipynb) used to preprocess the datafiles was written in R; I have reimplemented the preprocessing in Python and validated this reimplementation with the original (minus small errors made in the original which I corrected, see `# Remark:` comments in the code cells below).\n",
-    "\n",
-    "Moreover, the original notebook restricted the preprocessing to records stored in the MetaVision file system as CareVue files were assumed not to contain the necessary `starttimes` for treatments. Although this is partially true, using additonal preprocessing in `convert_cv_to_mv.ipynb` we were able to reconstruct the `starttimes` for CareVue records (as described in the [MIMIC-III docs](https://mimic.mit.edu/docs/iii/about/io/)), allowing us to expand our sepsis cohort with additional patients."
+    "The [original notebook](https://github.com/LucaMD/SRL/blob/master/SEPSIS/MIMIC_src/MIMIC_R_DataPreprocessing.ipynb) used to preprocess the datafiles was written in R; I have reimplemented the preprocessing in Python and validated this reimplementation with the original (minus small errors made in the original which I corrected, see `# Remark:` comments in the code cells below)."
    ]
   },
   {
@@ -1949,7 +1947,9 @@
     "# load lab results (only necessary columns)\n",
     "lab_df = read_csv(DATA_DIR + 'labs_cohort.csv', usecols=['icustay_id', 'charttime', 'lab_id', 'valuenum'])\n",
     "\n",
-    "# if exists, add additional file with hemotocrite, D-Dimer.etc.\n",
+    "# if exists, add additional file with hemotocrite, D-Dimer, etc.\n",
+    "# In AmsterdamUMCdb, it is included in vitals/lab results\n",
+    "# In MIMIC-III it is stored separately\n",
     "if os.path.exists(DATA_DIR + 'hematocrit_d-dimer_cvo2.csv'):\n",
     "    hema_df = read_csv(DATA_DIR + 'hematocrit_d-dimer_cvo2.csv')\n",
     "    lab_df = pd.concat([lab_df, hema_df], axis=0)\n",
@@ -2101,7 +2101,7 @@
     "    for i, interval_start in enumerate(timesteps[:-1]):\n",
     "        interval_end = timesteps[i + 1]\n",
     "        \n",
-    "        # Inclusion test for AmsterdamUMCdb: charttime in current interval?\n",
+    "        # AmsterdamUMCdb: charttime in current interval?\n",
     "        if is_umcdb:\n",
     "            condition = (settings['charttime'] > interval_start) & (settings['charttime'] <= interval_end)    \n",
     "        else: \n",
@@ -3272,19 +3272,27 @@
     "# For conversion rates see https://github.com/LucaMD/SRL/blob/master/SEPSIS/MIMIC_src/MIMIC_R_DataPreprocessing.ipynb\n",
     "data_final_df = pd.DataFrame({'icustay_id': data_all_df['icustay_id'], \n",
     "                              'timestep': data_all_df['timestep'], \n",
-    "                              # Discretized 'action' (0 - 24) added below\n",
+    "                              # actions and rewards\n",
     "                              'max_vaso': data_all_df['max_vaso'],\n",
-    "                              'max_vaso_prev': data_all_df['max_vaso_prev'],\n",
     "                              'total_iv_fluid': data_all_df['total_iv_fluid'],\n",
-    "                              'total_iv_fluid_prev': data_all_df['total_iv_fluid_prev'],\n",
     "                              'reward': data_all_df['reward'],\n",
+    "                              # previous treatments\n",
+    "                              'max_vaso_prev': data_all_df['max_vaso_prev'],\n",
+    "                              'total_iv_fluid_prev': data_all_df['total_iv_fluid_prev'],\n",
+    "                              'sepsis_antibiotics': data_all_df['sepsis_antibiotics'],\n",
+    "                              'profyl_antibiotics': data_all_df['profyl_antibiotics'],\n",
+    "                              'profyl_other': data_all_df['profyl_other'],\n",
+    "                              'ventilator': data_all_df['mech_vent'], # ventilation over time - not static!\n",
+    "                              # demographics\n",
     "                              'sirs_score': data_all_df['sirs'],\n",
     "                              'sofa_score': data_all_df['sofa'],\n",
     "                              'weight': data_all_df['weight'],\n",
-    "                              'ventilator': data_all_df['mech_vent'], # ventilation over time - not static!\n",
     "                              'height': data_all_df['height'],\n",
     "                              'age': data_all_df['age'],\n",
     "                              'gender': data_all_df['is_male'],\n",
+    "                              'elective': data_all_df['elective'],\n",
+    "                              'is_sepsis': data_all_df['is_sepsis'],\n",
+    "                              # vitals\n",
     "                              'heart_rate': data_all_df['heart_rate'],\n",
     "                              'temp': data_all_df['temp_c'],\n",
     "                              'mean_bp': data_all_df['mean_bp'],\n",
@@ -3292,6 +3300,7 @@
     "                              'sys_bp': data_all_df['sys_bp'],\n",
     "                              'resp_rate': data_all_df['resp_rate'],\n",
     "                              'spo2': data_all_df['sp_o2'],\n",
+    "                              # lab results\n",
     "                              'natrium': data_all_df['sodium'],\n",
     "                              'chloride': data_all_df['chloride'],\n",
     "                              'kalium': data_all_df['potassium'],\n",
@@ -3321,6 +3330,11 @@
     "                              'calcium': data_all_df['calcium'] * 0.25,\n",
     "                              'pf_ratio': data_all_df['paco2'] / data_all_df['fi_o2'],\n",
     "                              'glucose': data_all_df['glucose'] * 0.0555,\n",
+    "                              # 'cvo2': data_all_df['cvo2'],\n",
+    "                              # 'svo2': data_all_df['svo2'],\n",
+    "                              'd-dimer': data_all_df['d-dimer'],\n",
+    "                              'hematocrit': data_all_df['hematocrit'],\n",
+    "                              # other\n",
     "                              'running_total_urine_output': data_all_df['running_total_urine_output'],\n",
     "                              'total_urine_output': data_all_df['total_urine_output'],\n",
     "                              'running_total_iv_fluid_prev': data_all_df['running_total_iv_fluid_prev'],})"
@@ -3676,7 +3690,7 @@
    "source": [
     "## Discretize Action Space\n",
     "\n",
-    "#### Compute Bins"
+    "### Calculate Bins"
    ]
   },
   {
@@ -3811,7 +3825,7 @@
    "id": "cd0bddd5-3234-40a0-b706-af57da213e49",
    "metadata": {},
    "source": [
-    "#### Convert Continuous Actions to 5x5 Action Space"
+    "### Convert Continuous Actions to 5x5 Action Space"
    ]
   },
   {
@@ -3861,7 +3875,7 @@
    "id": "e8baf939-4aac-4b25-b024-bcb979a48200",
    "metadata": {},
    "source": [
-    "#### Export Action Bins and Action-Bin Mapping"
+    "### Export Action Bins and Action-Bin Mapping"
    ]
   },
   {
@@ -4884,7 +4898,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BINARY_FIELDS = ['ventilator', 'gender']\n",
+    "BINARY_FIELDS = ['ventilator', 'gender', 'elective', 'is_sepsis', 'sepsis_antibiotics', 'profyl_antibiotics', 'profyl_others']\n",
     "\n",
     "# features with positive/right skew\n",
     "LOG_FIELDS = ['alat', 'asat', 'aptt', 'bilirubin', 'creatinine', 'lactate', 'max_vaso_prev', 'total_iv_fluid_prev', \n",
@@ -5015,36 +5029,6 @@
    ],
    "source": [
     "data_train_df[feature_cols].hist(figsize=(20, 20), bins=40);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31551fe1-f0cf-4d14-bb48-14c525eea68c",
-   "metadata": {},
-   "source": [
-    "### MinMax Normalization\n",
-    "After Z-scoring Roggeveen et al. scales all features using MinMax normalization, which we will repeat for good measure (although it undoes some of the previous normalization steps);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 140,
-   "id": "9cec3a09-5d22-4eba-a5f8-fd7187b36caf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for col in tqdm(df.columns):\n",
-    "#     if col not in EXCLUDE:\n",
-    "#         # Min/max estimates from training set!\n",
-    "#         train_min = data_train_df[col].min()\n",
-    "#         train_max = data_train_df[col].max()\n",
-    "        \n",
-    "#         data_train_df[col] = (data_train_df[col] - train_min) / (train_max - train_min)\n",
-    "#         data_valid_df[col] = (data_valid_df[col] - train_min) / (train_max - train_min)\n",
-    "#         data_test_df[col] = (data_test_df[col] - train_min) / (train_max - train_min)\n",
-    "        \n",
-    "# print('Done!')\n",
-    "# data_train_df.head()"
    ]
   },
   {
@@ -5248,7 +5232,7 @@
    "id": "0055db50",
    "metadata": {},
    "source": [
-    "#### Memory Usage"
+    "### Memory Usage"
    ]
   },
   {
