corrected output names

--- a/preprocessing/DataPreprocessing_Aggregated.ipynb
+++ b/preprocessing/DataPreprocessing_Aggregated.ipynb
@@ -3786,9 +3786,9 @@
     "test_icustays = icustay_ids[num_train + num_valid:]\n",
     "\n",
     "# Store train/valid/test icustay_ids\n",
-    "np.savetxt(OUTPUT_DIR + '/mimic-iii_icustay_ids_train.npy', train_icustays)\n",
-    "np.savetxt(OUTPUT_DIR + '/mimic-iii_icustay_ids_valid.npy', valid_icustays)\n",
-    "np.savetxt(OUTPUT_DIR + '/mimic-iii_icustay_ids_test.npy', test_icustays)\n",
+    "np.savetxt(OUTPUT_DIR + '/icustay_ids_train.npy', train_icustays)\n",
+    "np.savetxt(OUTPUT_DIR + '/icustay_ids_valid.npy', valid_icustays)\n",
+    "np.savetxt(OUTPUT_DIR + '/icustay_ids_test.npy', test_icustays)\n",
     "\n",
     "print('Dataset instances:')\n",
     "print('Train  %s' % len(train_icustays))\n",
@@ -5122,9 +5122,9 @@
    ],
    "source": [
     "# Don't forget to save!!\n",
-    "data_train_df.to_csv(OUTPUT_DIR + '/mimic-iii_train.csv', index=False)\n",
-    "data_valid_df.to_csv(OUTPUT_DIR + '/mimic-iii_valid.csv', index=False)\n",
-    "data_test_df.to_csv(OUTPUT_DIR + '/mimic-iii_test.csv', index=False)\n",
+    "data_train_df.to_csv(OUTPUT_DIR + '/train.csv', index=False)\n",
+    "data_valid_df.to_csv(OUTPUT_DIR + '/valid.csv', index=False)\n",
+    "data_test_df.to_csv(OUTPUT_DIR + '/test.csv', index=False)\n",
     "print('Done!')"
    ]
   },
